# fred-mcp

./: .gitignore  LICENSE  README.md  gdp.json  publish.ps1  publish.sh  pyproject.toml  run-inspector.ps1  run-inspector.sh
src/fred_mcp/: server.py
