[project]
name = "fred-data-mcp"
version = "0.1.7"
description = "MCP server for Federal Reserve Economic Data (FRED)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fredapi>=0.5.2",
    "pandas>=2.0.0",
    "mcp>=1.26.0",
    "tabulate>=0.9.0",
]
authors = [
  { name = "Adaptive Agent", email = "agent@example.com" },
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/example/fred-mcp-server"
Repository = "https://github.com/example/fred-mcp-server"
Issues = "https://github.com/example/fred-mcp-server/issues"



[project.scripts]
fred-data-mcp = "fred_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fred_mcp"]







